KE-16068 fix bug which recommended model does not have dimensions